--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Next Level Week - eSports</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="app.css"> <!--serve para linkar o arquivo css-->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
-        <header>
+        <!-- <header>
             <div>
                 <img src="https://github.com/gabrieljte.png" alt="foto do user gabrieljte">
             </div>
-        </header>
+        </header> -->
 
         <main>
             <!--meus jogos-->
